@@ -961,6 +961,7 @@ cl_symbols[] = {
 {"MAKE-METHOD", CL_ORDINARY, NULL, -1},
 {"METHOD", CL_ORDINARY, NULL, -1},
 {"METHOD-COMBINATION-ERROR", CL_ORDINARY, NULL, -1},
+{"METHOD-COMBINATION", CL_ORDINARY, NULL, -1},
 {"METHOD-QUALIFIERS", CL_ORDINARY, NULL, -1},
 {"NEXT-METHOD-P", CL_ORDINARY, NULL, -1},
 {"NO-APPLICABLE-METHOD", CL_ORDINARY, NULL, -1},
@@ -1033,7 +1034,6 @@ cl_symbols[] = {
 {SYS_ "COERCE-TO-PACKAGE", SI_ORDINARY, si_coerce_to_package, 1},
 {SYS_ "COMPILED-FUNCTION-BLOCK", SI_ORDINARY, si_compiled_function_block, 1},
 {SYS_ "COMPILED-FUNCTION-NAME", SI_ORDINARY, si_compiled_function_name, 1},
-{SYS_ "COMPUTE-EFFECTIVE-METHOD", SI_ORDINARY, NULL, -1},
 {SYS_ "COPY-STREAM", SI_ORDINARY, si_copy_stream, 1},
 {SYS_ "DAYLIGHT-SAVING-TIME-P", SI_ORDINARY, si_daylight_saving_time_p, -1},
 {SYS_ "DISPATCH-FUNCTION-P", SI_ORDINARY, si_dispatch_function_p, 1},
@@ -1050,8 +1050,6 @@ cl_symbols[] = {
 {SYS_ "FRS-TOP", SI_ORDINARY, si_frs_top, 0},
 {SYS_ "FSET", SI_ORDINARY, si_fset, -1},
 {SYS_ "FUNCTION-BLOCK-NAME", SI_ORDINARY, si_function_block_name, 1},
-{SYS_ "GENERIC-FUNCTION-METHOD-COMBINATION", SI_ORDINARY, NULL, -1},
-{SYS_ "GENERIC-FUNCTION-METHOD-COMBINATION-ARGS", SI_ORDINARY, NULL, -1},
 {SYS_ "GET-LOCAL-TIME-ZONE", SI_ORDINARY, si_get_local_time_zone, 0},
 {SYS_ "GET-SYSPROP", SI_ORDINARY, si_get_sysprop, 2},
 {SYS_ "GET-STRING-INPUT-STREAM-INDEX", SI_ORDINARY, si_get_string_input_stream_index, 1},
@@ -1146,6 +1144,7 @@ cl_symbols[] = {
 #else
 {SYS_ "ALLOCATE-GFUN", SI_ORDINARY, si_allocate_gfun, 3},
 {SYS_ "CHANGE-INSTANCE", SI_ORDINARY, si_change_instance, 4},
+{SYS_ "COMPUTE-EFFECTIVE-METHOD", SI_ORDINARY, NULL, -1},
 {SYS_ "GFUN-NAME", SI_ORDINARY, si_gfun_name, 1},
 {SYS_ "GFUN-NAME-SET", SI_ORDINARY, si_gfun_name_set, 2},
 {SYS_ "GFUN-METHOD-HT", SI_ORDINARY, si_gfun_method_ht, 1},
